--- a/Example/DownloadButton/Base.lproj/Main_iPhone.storyboard
+++ b/Example/DownloadButton/Base.lproj/Main_iPhone.storyboard
@@ -88,10 +88,10 @@
                                     <outlet property="delegate" destination="FkK-Aq-NJ0" id="THx-wL-SlO"/>
                                 </connections>
                             </view>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" misplaced="YES" image="handsome" translatesAutoresizingMaskIntoConstraints="NO" id="khe-bG-0y6">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" ambiguous="YES" misplaced="YES" image="handsome" translatesAutoresizingMaskIntoConstraints="NO" id="khe-bG-0y6">
                                 <rect key="frame" x="25" y="117" width="364" height="570"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Download some random majestic guy picture" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8O5-Sb-gmr">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Download some random majestic guy picture" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8O5-Sb-gmr">
                                 <rect key="frame" x="33" y="83" width="347" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -395,7 +395,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="handsome" width="600" height="804"/>
+        <image name="handsome" width="300" height="402"/>
         <image name="majestic" width="3062" height="3121"/>
     </resources>
 </document>
